test updated for preprocessor

--- a/Model/test.ipynb
+++ b/Model/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,15 +15,17 @@
     "sys.path.append('../Preprocess-Data/')\n",
     "from category_reducer import category_reducer\n",
     "\n",
-    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "\n",
-    "from tensorflow.keras.models import load_model"
+    "from tensorflow.keras.models import load_model\n",
+    "\n",
+    "from preprocessor import PreprocessImg\n",
+    "from preprocessor import PreprocessText"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -67,266 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class PreprocessText(Tokenizer):\n",
-    "    '''\n",
-    "    # Class to tokenize and pad the text data\n",
-    "\n",
-    "    Args:\n",
-    "        - data: The text data list or series to be tokenized and padded\n",
-    "    '''\n",
-    "    def __init__(self):\n",
-    "        super().__init__(filters='!\"#$%&()*+,-./:;=?@[\\\\]^_`{|}~\\t\\n')\n",
-    "\n",
-    "        self.start_mark = '<start> '\n",
-    "        self.end_mark = ' <end>'\n",
-    "        self.data = None\n",
-    "        self.tokens = None\n",
-    "        self.vocab_size = None\n",
-    "        self.numbers_of_words = None\n",
-    "        self.max_tokens = None\n",
-    "        self.padded_tokens = None\n",
-    "\n",
-    "    def preprocess(self, data):\n",
-    "        '''\n",
-    "        # Preprocess the text data\n",
-    "\n",
-    "        Args:\n",
-    "            - data: The text data list or series to be tokenized and padded\n",
-    "        '''\n",
-    "        self.data = data.apply(lambda x: self.start_mark + x + self.end_mark)\n",
-    "\n",
-    "        self.fit_on_texts(self.data)\n",
-    "        self.tokens = self.texts_to_sequences(self.data)\n",
-    "\n",
-    "        self.vocab_size = len(self.word_index) + 1\n",
-    "        self.numbers_of_words = [len(token) for token in self.tokens]\n",
-    "        self.max_tokens = max(self.numbers_of_words)\n",
-    "\n",
-    "        self.padded_tokens = pad_sequences(self.tokens, padding='post', truncating='post')\n",
-    "\n",
-    "    # padding the token\n",
-    "    @staticmethod\n",
-    "    def pad_data(text, max_tokens=None):\n",
-    "        '''\n",
-    "        # Pad the tokens to a new maximum length\n",
-    "\n",
-    "        Args:\n",
-    "            - text: The tokens to be padded\n",
-    "            - max_tokens: The maximum length of the tokens\n",
-    "\n",
-    "        Returns:\n",
-    "            - np.array: The padded tokens\n",
-    "        '''\n",
-    "        padded_tokens = pad_sequences(text, maxlen=max_tokens, padding='post', truncating='post')\n",
-    "        return padded_tokens\n",
-    "\n",
-    "    def generate_data(self, image_data):\n",
-    "        '''\n",
-    "        # Generate the data for the model based on the next word prediction.\n",
-    "        # First token is input and the second token is output and so on till the end of the sequence.\n",
-    "\n",
-    "        * Example:\n",
-    "            - title = \"Sel felaketi sonucu 3 vatandaş kayıp\"\n",
-    "            - word_index = {'Sel': 9, 'felaketi': 5, 'sonucu': 3, '3': 7, 'vatandaş': 5, 'kayıp': 6 }\n",
-    "            - tokens: [start_token, 9, 5, 3, 7, 5, 6, end_token]\n",
-    "\n",
-    "            | Input                                         |   Output    |\n",
-    "            | --------------------------------------------  | ----------  |\n",
-    "            | Image + start_token                           |     9       |\n",
-    "            | Image + start_token + 9                       |     5       |\n",
-    "            | Image + start_token + 9 + 5                   |     3       |\n",
-    "            | Image + start_token + 9 + 5 + 3               |     7       |\n",
-    "            | Image + start_token + 9 + 5 + 3 + 7           |     5       |\n",
-    "            | Image + start_token + 9 + 5 + 3 + 7 + 5       |     6       |\n",
-    "            | Image + start_token + 9 + 5 + 3 + 7 + 5 + 6   |  end_token  |\n",
-    "\n",
-    "        Args:\n",
-    "            - image_data: The image data\n",
-    "            - max_tokens: The maximum length of the tokens\n",
-    "\n",
-    "        Returns:\n",
-    "            - np.array: The image and text data\n",
-    "        '''\n",
-    "        X_images_list, X_texts_list, y_texts_list = [], [], []\n",
-    "\n",
-    "        for img, seq in zip(image_data, self.padded_tokens):\n",
-    "            for i in range(1, len(seq)):\n",
-    "                in_seq, out_seq = seq[:i], seq[i]\n",
-    "                in_seq = pad_sequences([in_seq], maxlen=self.max_tokens)[0]\n",
-    "                out_seq = to_categorical([out_seq], num_classes=self.vocab_size)[0]\n",
-    "                X_images_list.append(img)\n",
-    "                X_texts_list.append(in_seq)\n",
-    "                y_texts_list.append(out_seq)\n",
-    "\n",
-    "        self.X_images = np.array(X_images_list)\n",
-    "        self.X_texts = np.array(X_texts_list)\n",
-    "        self.y_texts = np.array(y_texts_list)\n",
-    "\n",
-    "        return self.X_images, self.X_texts, self.y_texts\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def token_to_text(tokens, tokenizer):\n",
-    "        \"\"\"\n",
-    "        # Convert the tokens to text\n",
-    "\n",
-    "        Args:\n",
-    "            - tokens: The tokens to be converted\n",
-    "            - tokenizer: The tokenizer to use for converting tokens\n",
-    "\n",
-    "        Returns:\n",
-    "            - str: The text\n",
-    "        \"\"\"\n",
-    "        words = [tokenizer.index_word[token] for token in tokens]\n",
-    "        text = ' '.join(words)\n",
-    "        return text\n",
-    "\n",
-    "    def text_to_token(self, text):\n",
-    "        \"\"\"\n",
-    "        # Convert single text to token.\n",
-    "\n",
-    "        Args:\n",
-    "            - text: The text to be converted\n",
-    "        \n",
-    "        Returns:\n",
-    "            - list: The tokens\n",
-    "        \"\"\"\n",
-    "        tokens = self.texts_to_sequences([text])[0]\n",
-    "        return tokens\n",
-    "\n",
-    "    def get_info(self):\n",
-    "        '''\n",
-    "        # Get the information about the tokenized and padded data\n",
-    "        '''\n",
-    "        print(\"Max tokens: \", self.max_tokens)\n",
-    "        print(\"Min tokens: \", min(self.numbers_of_words))\n",
-    "        print(\"Mean tokens: \", int(np.mean(self.numbers_of_words)))\n",
-    "        print(\"Standard deviation of tokens: \", int(np.std(self.numbers_of_words)))\n",
-    "        print(\"==\")\n",
-    "        print(\"Vocabulary Size: \", len(self.word_index) +1 )\n",
-    "        print('Shape of padded tokens: ', self.padded_tokens.shape)\n",
-    "        print('X_images shape: ', self.X_images.shape)\n",
-    "        print('X_texts shape: ', self.X_texts.shape)\n",
-    "        print('y_texts shape: ', self.y_texts.shape)\n",
-    "\n",
-    "    def save_tokenizer(self, filepath):\n",
-    "        '''\n",
-    "        # Save the tokenizer to a file\n",
-    "\n",
-    "        Args:\n",
-    "            - filepath: The path to save the tokenizer\n",
-    "        '''\n",
-    "        with open(filepath, 'wb') as file:\n",
-    "            pickle.dump(self, file)\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def load_tokenizer(filepath):\n",
-    "        '''\n",
-    "        # Load the tokenizer from a file\n",
-    "\n",
-    "        Args:\n",
-    "            - filepath: The path to load the tokenizer from\n",
-    "\n",
-    "        Returns:\n",
-    "            - PreprocessText: The loaded tokenizer\n",
-    "        '''\n",
-    "        with open(filepath, 'rb') as file:\n",
-    "            tokenizer = pickle.load(file)\n",
-    "        return tokenizer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tensorflow.keras.preprocessing.image import load_img\n",
-    "from tensorflow.keras.preprocessing.image import img_to_array\n",
-    "\n",
-    "class PreprocessImg:\n",
-    "    '''\n",
-    "    # Class to preprocess the images and get the size information of the images.\n",
-    "    '''\n",
-    "    def __init__(self):\n",
-    "        self.loaded_imgs = []\n",
-    "        self.img_arrays = []\n",
-    "\n",
-    "    def load_img(self, df, target_size=None):\n",
-    "        self.df = df\n",
-    "        for img in self.df['img_path']:\n",
-    "            img = \"../Data/imgs/\" + img\n",
-    "            img = load_img(img, target_size=target_size)\n",
-    "            self.loaded_imgs.append(img)\n",
-    "\n",
-    "        return self.loaded_imgs\n",
-    "\n",
-    "    def preprocess_single_img(self, img_path, ):\n",
-    "        img_path = img_path.replace('\\\\', '/')\n",
-    "        img = load_img(img_path, target_size=(224, 224))\n",
-    "        img = img_to_array(img)\n",
-    "        img = img / 255.0\n",
-    "        return img\n",
-    "\n",
-    "    def img_to_array(self):\n",
-    "        '''\n",
-    "        # Load the images from the directory\n",
-    "\n",
-    "        Returns:\n",
-    "            - loaded_imgs: List of loaded images\n",
-    "        '''\n",
-    "        for img in self.loaded_imgs:\n",
-    "            img = img_to_array(img)\n",
-    "            self.img_arrays.append(img)\n",
-    "\n",
-    "        return np.array(self.img_arrays) / 255.0\n",
-    "\n",
-    "    def get_size_info(self, loaded_imgs):\n",
-    "        '''\n",
-    "        # Get the size information of the images\n",
-    "\n",
-    "        Args:\n",
-    "            - loaded_imgs: list of loaded images\n",
-    "\n",
-    "        Returns:\n",
-    "            - weights_mean: Mean of the weights of the images\n",
-    "            - weights_std: Standard deviation of the weights of the images\n",
-    "            - heights_mean: Mean of the heights of the images\n",
-    "            - heights_std: Standard deviation of the heights of the images\n",
-    "        '''\n",
-    "        img_weights = []\n",
-    "        img_heights = []\n",
-    "        for size in loaded_imgs:\n",
-    "            img_weights.append(size.size[0])\n",
-    "            img_heights.append(size.size[1])\n",
-    "\n",
-    "        max_weight = max(img_weights)\n",
-    "        min_weight = min(img_weights)\n",
-    "        weights_mean = np.mean(img_weights)\n",
-    "        weights_std = np.std(img_weights)\n",
-    "\n",
-    "        max_height = max(img_heights)\n",
-    "        min_heigth = min(img_heights)\n",
-    "        heights_mean = np.mean(img_heights)\n",
-    "        heights_std = np.std(img_heights)\n",
-    "\n",
-    "        print(\"Max width: \", max_weight)\n",
-    "        print(\"Min width: \", min_weight)\n",
-    "        print(\"Mean width:\", weights_mean)\n",
-    "        print(\"Standard deviation of widths:\", weights_std)\n",
-    "        print(\"==\")\n",
-    "        print('Max height:', max_height)\n",
-    "        print('Min height:', min_heigth)\n",
-    "        print(\"Mean height:\", heights_mean)\n",
-    "        print(\"Standard deviation of heights:\", heights_std)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -397,12 +140,12 @@
      "output_type": "stream",
      "text": [
       "1/1 [==============================] - 3s 3s/step\n",
-      "1/1 [==============================] - 0s 83ms/step\n",
-      "1/1 [==============================] - 0s 96ms/step\n",
-      "1/1 [==============================] - 0s 89ms/step\n",
-      "1/1 [==============================] - 0s 86ms/step\n",
-      "1/1 [==============================] - 0s 80ms/step\n",
-      "1/1 [==============================] - 0s 84ms/step\n"
+      "1/1 [==============================] - 0s 81ms/step\n",
+      "1/1 [==============================] - 0s 66ms/step\n",
+      "1/1 [==============================] - 0s 98ms/step\n",
+      "1/1 [==============================] - 0s 76ms/step\n",
+      "1/1 [==============================] - 0s 93ms/step\n",
+      "1/1 [==============================] - 0s 80ms/step\n"
      ]
     },
     {
